<resources>
    <string name="app_name">Msj_Cliente_Servido</string>
    <string name="iniciar_servidor">Iniciar Servidor</string>
    <string name="iniciar_cliente">Iniciar Cliente</string>
    <string name="title_activity_act__cliente">Act_Cliente</string>
    <string name="title_activity_act__servidor">Act_Servidor</string>
    <string name="mi_ip">mi ip:</string>
    <string name="mi_puerto">puerto</string>
    <string name="ip">IP:</string>
    <string name="puerto">Puerto:</string>
    <string name="conectar">Conectar</string>
    <string name="deconectado">Desconectado</string>
    <string name="estado">Estado:</string>
    <string name="conectado">Conectado</string>
    <string name="title_activity_act_classes">Act_classes</string>
    <string name="parado">Ofline</string>
    <string name="cambiar">Cambiar</string>
    <string name="mendsajes">Mensajes</string>
    <string name="comentario">comentario</string>
    <string name="desconectado">Desconectado</string>
    <string name="iniciar_chat">Iniciar Chat</string>
    <string name="negro_garca">Negro garca</string>
    <string name="conectados">Conectados</string>
    <string name="Registrar_asistencia">Registrar asistencia</string>
    <string name="conectando">Conectado</string>
    <string name="registrando_presencia">Registrando presencia</string>
    <string name="listaDeConectados">Lista de Usuarios</string>
    <string name="error_al_conectar">Error al conectar al servidor, comunicate con el administrador o intenta mas tarde.</string>
    <string name="asistencia_registrada">Asistencia registada exitosamente</string>
    <string name="iniciar_chcat">Iniciar Chat</string>
    <string name="nick">nick</string>
    <string name="mensaje">un mensaje copado de esos que siempre escribo</string>
    <string name="hora">Hora</string>
    <string name="fecha">Fecha</string>
    <string name="nuevoVliente">Nuevo Cliente</string>
    <string name="se_ha_unido_a_la_charla">Se ha unido a la charla</string>
    <string name="chact">Chat</string>
</resources>
