<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context="lucas.msj_cliente_servido.Activity.MainActivity">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_servidor"
        android:onClick="onClickIrServer"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_cliente"
        android:onClick="onClickIrCliente"/>

    <EditText
        android:id="@+id/ET_nick2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/negro_garca"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_chcat"
        android:onClick="onClickIrChat"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_servidor"
            android:visibility="gone"
            android:onClick="OnClickIniciarServisor"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_cliente"
            android:visibility="gone"
            android:onClick="OnClickIniciarCliente"/>

        <EditText
            android:id="@+id/ET_nick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/negro_garca"
            />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_chat"
            android:onClick="OnClickIniciarClass"/>

    </LinearLayout>


</LinearLayout>
