<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lucas.msj_cliente_servido.Activity.Act_chat">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:text="@string/conectados"/>
        <TextView
            android:id="@+id/TV_chat_conectados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:padding="3dp"
            android:gravity="center"
            android:background="@drawable/boton_circulo_precionado_azul"
            android:textColor="#fff"/>

    </LinearLayout>


    <TextView
        android:id="@+id/TV_chat_estado"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/estado"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/RV_recycler"
        android:layout_below="@id/TV_chat_estado"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp"
        >

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:padding="5dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="50dp"
            android:id="@+id/ET_cuerpoComentario"
            android:layout_weight="1"
            android:textSize="17dp"
            android:capitalize="sentences"
            android:hint="@string/comentario"/>

        <ImageButton
            android:layout_width="80dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:id="@+id/BTN_agregarComentario"
            android:src="@drawable/mens"
            android:background="@drawable/bg_selector_boton_circulo"
            android:onClick="onClickenviarMensaje"
            android:scaleType="centerInside"/>
    </LinearLayout>



</RelativeLayout>
